cmabios de prueva

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- Menú de Navigation -->
-	<nav class="navbar navbar-expand-md navbar-light bg-dark sticky-top">
+	<nav class="navbar navbar-expand-md navbar-light sticky-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"><img src="img/w3newbie.png" alt=""></a>
 				<ul class="navbar-nav ml-auto">
@@ -38,21 +38,21 @@
                 <div class="container-new"> 
                     <div class="card">
                         <div class="content-new">
-                            <h3>titulo 1</h3>
+                            <h3>¿Quienes somos?</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod rerum in dolorum perspiciatis asperiores odio, numquam corrupti sint eius, error incidunt quaerat, nostrum quam nihil ad quidem commodi quibusdam inventore neque cumque id aspernatur nisi suscipit repudiandae! Cupiditate dignissimos iste nesciunt molestiae excepturi magni aliquid sed laboriosam consectetur, commodi architecto at dolor ea quasi, error beatae similique. Officia, ratione laborum.</p>
                         </div>
                         <a class="more"></a>
                     </div>
                     <div class="card">
                         <div class="content-new">
-                            <h3>titulo 1</h3>
+                            <h3>Misión</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod rerum in dolorum perspiciatis asperiores odio, numquam corrupti sint eius, error incidunt quaerat, nostrum quam nihil ad quidem commodi quibusdam inventore neque cumque id aspernatur nisi suscipit repudiandae! Cupiditate dignissimos iste nesciunt molestiae excepturi magni aliquid sed laboriosam consectetur, commodi architecto at dolor ea quasi, error beatae similique. Officia, ratione laborum.</p>
                         </div>
                         <a class="more"></a>
                     </div>
                     <div class="card">
                         <div class="content-new">
-                            <h3>titulo 1</h3>
+                            <h3>Visión</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod rerum in dolorum perspiciatis asperiores odio, numquam corrupti sint eius, error incidunt quaerat, nostrum quam nihil ad quidem commodi quibusdam inventore neque cumque id aspernatur nisi suscipit repudiandae! Cupiditate dignissimos iste nesciunt molestiae excepturi magni aliquid sed laboriosam consectetur, commodi architecto at dolor ea quasi, error beatae similique. Officia, ratione laborum.</p>
                         </div>
                         <a class="more"></a>
