--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -14,9 +14,9 @@
 </head>
 <body>
         <!-- Menú de Navigation -->
-	<nav class="navbar navbar-expand-md navbar-light bg-dark sticky-top">
+	<nav class="navbar navbar-expand-md navbar-light sticky-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"><img src="img/w3newbie.png" alt=""></a>
+			<a class="navbar-brand" href="#"><img src="../img/w3newbie.png" alt=""></a>
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item "><a href="../index.html" class="nav-link item">Home</a></li>
 					<li class="nav-item"><a href="../servicios/servicios.html" class="nav-link item">Servicios</a></li>
@@ -57,7 +57,7 @@
 	<div class="container-fluid">
 		<div class="row text-center">
 			<div class="col-md-4">
-				<img src="img/w3newbie.png" alt="">
+				<img src="../img/w3newbie.png" alt="">
 				<hr class="light">
 				<p>555-555-5555</p>
 				<p>email@myemail.com</p>
@@ -66,9 +66,11 @@
 				<hr class="light">
 				<h5>Horario de Atención</h5>
 				<hr class="light">
-				<p>Lunes: 9am - 5pm</p>
-				<p>Miercoles: 9am - 5pm</p>
-				<p>Viernes: 9am - 5pm</p>
+				<p> <b> Lunes - viernes: </b><br> 
+                    Turno Manaña: 9am - 12:30pm <br>
+                    Turno Tarde: 3pm - 8pm</p>
+				<p><b> Sabado - Domingo: </b><br>
+                    Turno Manaña: 9am - 12:30pm</p>
 			</div>
 			<div class="col-md-4">
 				<hr class="light">
