--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--- Seccion principal -->
     <section class="sec_prin">
         <div class="banner_video">
-            <video src=""></video>
+            <img src="img/Banner.png" alt="">
         </div>
         <section class="banner">
             <div class="banner_img">
@@ -39,23 +39,23 @@
                     <div class="card">
                         <div class="content-new">
                             <h3>¿Quienes somos?</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod rerum in dolorum perspiciatis asperiores odio, numquam corrupti sint eius, error incidunt quaerat, nostrum quam nihil ad quidem commodi quibusdam inventore neque cumque id aspernatur nisi suscipit repudiandae! Cupiditate dignissimos iste nesciunt molestiae excepturi magni aliquid sed laboriosam consectetur, commodi architecto at dolor ea quasi, error beatae similique. Officia, ratione laborum.</p>
+                            <p>Somos una empresa de cosmetología encargada de tu cuidar tu apariencia, con los mejores equipos y profesiones capacitados</p>
                         </div>
-                        <a class="more"></a>
+                        <!-- <a class="more"></a> -->
                     </div>
                     <div class="card">
                         <div class="content-new">
                             <h3>Misión</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod rerum in dolorum perspiciatis asperiores odio, numquam corrupti sint eius, error incidunt quaerat, nostrum quam nihil ad quidem commodi quibusdam inventore neque cumque id aspernatur nisi suscipit repudiandae! Cupiditate dignissimos iste nesciunt molestiae excepturi magni aliquid sed laboriosam consectetur, commodi architecto at dolor ea quasi, error beatae similique. Officia, ratione laborum.</p>
+                            <p>Satisfacer las necesidades de belleza de nuestros clientes mediante servicios de excelencia en calidad, brindado por personal altamente profesional</p>
                         </div>
-                        <a class="more"></a>
+                        <!-- <a class="more"></a> -->
                     </div>
                     <div class="card">
                         <div class="content-new">
                             <h3>Visión</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod rerum in dolorum perspiciatis asperiores odio, numquam corrupti sint eius, error incidunt quaerat, nostrum quam nihil ad quidem commodi quibusdam inventore neque cumque id aspernatur nisi suscipit repudiandae! Cupiditate dignissimos iste nesciunt molestiae excepturi magni aliquid sed laboriosam consectetur, commodi architecto at dolor ea quasi, error beatae similique. Officia, ratione laborum.</p>
+                            <p>Ser la corporación líder en la satisfacción de necesidades de belleza a nivel nacional e incursionar en el mercado internacional.</p>
                         </div>
-                        <a class="more"></a>
+                        <!-- <a class="more"></a> -->
                     </div>
                 </div>
             </section>
@@ -84,16 +84,18 @@
 				<hr class="light">
 				<h5>Horario de Atención</h5>
 				<hr class="light">
-				<p>Lunes: 9am - 5pm</p>
-				<p>Miercoles: 9am - 5pm</p>
-				<p>Viernes: 9am - 5pm</p>
+				<p> <b> Lunes - viernes: </b><br> 
+                    Turno Manaña: 9am - 12:30pm <br>
+                    Turno Tarde: 3pm - 8pm</p>
+				<p><b> Sabado - Domingo: </b><br>
+                    Turno Manaña: 9am - 12:30pm</p>
 			</div>
 			<div class="col-md-4">
 				<hr class="light">
 				<h5>Dirección</h5>
 				<hr class="light">
 				<p>City, State, 00000</p>
-				<p>100 State Name</p>
+				<p>100 State Name</p> 
 			</div>
 			<div class="col-12">
 				<hr class="light-100">
