--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--- Seccion principal -->
     <section class="sec_prin">
         <div class="banner_video">
-            <img src="img/Banner.png" alt="">
+            <video src="img/Video_publicidad.mp4" controls poster="img/Banner.png"></video>
         </div>
         <section class="banner">
             <div class="banner_img">
