--- a/servicios/servicios.html
+++ b/servicios/servicios.html
@@ -110,7 +110,7 @@
 			</div>
 			<div class="col-12">
 				<hr class="light-100">
-				<h5>&copy; nombre-copy.com</h5>
+				<h5>&copy; PEBE-copy.com</h5>
 			</div>
 		</div>
 	</div>
