--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -10,7 +10,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link rel="stylesheet" href="../CSS/contacto.css">
-    <title>Document</title>
+	<link rel="icon" href="https://image.flaticon.com/icons/png/512/3460/3460156.png">
+    <title>PEBE</title>
 </head>
 <body>
         <!-- Menú de Navigation -->
